fix: replace focus with visible

--- a/src/components/UI/Tabs/Tab/Tab.module.css
+++ b/src/components/UI/Tabs/Tab/Tab.module.css
@@ -12,7 +12,8 @@
   cursor: pointer;
 }
 
-.btn:focus {
+.btn:focus-visible,
+.btn:focus-within {
   outline: 0.2rem solid currentColor;
   outline-offset: 0.2rem;
 }
@@ -46,7 +47,6 @@
   background-color: light-dark(var(--color-neutral40), var(--color-neutral80));
 }
 
-.pill[aria-selected='true']:focus,
 .pill[aria-selected='true']:focus-visible,
 .pill[aria-selected='true']:focus-within {
   outline-color: var(--color-neutral20);
@@ -77,7 +77,6 @@
 }
 
 .underline:active::after,
-.underline:focus::after,
 .underline:focus-visible::after,
 .underline:focus-within::after,
 .underline:hover::after {
